Fixed z-index of circles around experience.

--- a/style.sass
+++ b/style.sass
@@ -348,6 +348,7 @@ h2
     letter-spacing: -1px
     margin-bottom: 21px
     position: relative
+    z-index: 5
 
 .bio-description
     font-size: 18px
@@ -362,6 +363,7 @@ h2
     width: 231px
     border-radius: 100%
     opacity: .4
+    z-index: -1
 
 .bio-cir-one
     right: -5px
